# UNITE

./: README.rst  README_DockerHub.md
deepprep/TargetAutoPlaning/: Aphasia_auto_point.py  Cognition_auto_point.py  Motor_auto_point.py  SCAN_VIM_auto_point.py  pyproject.toml
deepprep/TargetAutoPlaning/TargetAutoPlaning/: AphasiaTargetPlanner.py  CognitionTargetPlanner.py  MotorTargetPlanner.py  README.md  VIM_SCAN_TargetPlanner.py  __init__.py  mri_synthmorph_joint.py  pBFS.py  parc213_DeepPrep.py  parcellation_18.py  planner.py
deepprep/TargetAutoPlaning/TargetAutoPlaning/resource/: ReadMe.md  lh.22_HeatMap_0dot1_cluster1.mgh  lh_BigPD_Patient_SCAN_HeatMap_0dot1_cluster2.mgh  lh_fs6_default_pstg_mask_surf.mgh  lh_fs6_medial_mask_surf.mgh  lh_fs6_pstg_mstg_aang_psmg_mask.mgh  lh_fs6_sma_mask_surf.mgh  lh_fs6_ventro_default_candi_mask_surf.mgh  rh.22_HeatMap_0dot1_cluster1.mgh  rh_fs6_default_pstg_mask_surf.mgh  rh_fs6_frontal_pole_mask_surf.mgh  rh_fs6_m1_mask_surf.mgh  rh_fs6_medial_mask_surf.mgh  rh_fs6_pstg_mstg_aang_mask.mgh
deepprep/TargetAutoPlaning/TargetAutoPlaning_Core/: AphasiaTargetPlanner.py  CognitionTargetPlanner.py  MotorTargetPlanner.py  VIM_SCAN_TargetPlanner.py  mri_synthmorph_joint.py  parcellation_18.py  planner.py
deepprep/TargetAutoPlaning/TargetAutoPlaning_Core/resource/: lh_fs6_dorsal_default_candi_mask_surf.mgh  lh_fs6_frontal_pole_mask_surf.mgh  (+8 more)
deepprep/TargetAutoPlaning/Utilities/: process_FC.py  read_save_nii.py
deepprep/TargetAutoPlaning/Utilities_ss/: convert.py  process_FC.py  read_save_mgh.py  read_save_nii.py  wb_view.py
(+632 files in other folders)
