[project]
name = "scan-targetautoplaning"
version = "0.1.0"
description = ""
authors = [
    {name = "Ning AN",email = "ninganme0317@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (<=2.0.1)",
    "ants (>=0.0.7,<0.0.8)",
    "nibabel (>=5.3.2,<6.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pyvista (>=0.45.2,<0.46.0)",
    "sh (>=2.2.2,<3.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "antspyx (>=0.5.4,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
